tests/src/snapshots/fe_compiler_tests__compile_errors__bad_map.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` expects 2 arguments, but 3 were provided
  ┌─ [snippet]:3:6
  │
3 │   x: Map<u8, u8, u8>
  │      ^^^ --  --  -- supplied 3 arguments
  │      │            
  │      expects 2 arguments



TypeError on line 3
pub def f():
  [31mx: Map<u8, u8, u8>[0m
